--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- Barra de navegación -->
     <div class="navbar">
     <nav>
-        <a href="#skills">Habilidades Técnicas</a>
+        <a href="#sobre-mi">Sobre Mí</a>
+        <a href="#certificate">Certificados</a>
+        <a href="#skills-programming">Habilidades de Programación</a>
         <a href="#experience">Experiencia</a>
         <a href="#contact">Contacto</a>
     </nav>
@@ -27,18 +29,35 @@
     </div>
 
     <!-- Sección: Sobre mí -->
-    <div class="section about">
+    <div class="section about" id="sobre-mi">
         <h2 class="section-title">Sobre mí</h2>
         <p>Bachiller en Ingeniería de Sistemas con experiencia en soporte TI, desarrollo web y gestióin de bases de datos.
         Motivado por aprender y aplicar tecnologías modernas en entornos corporativos reales.</p>
     </div>
 
-    <!-- Sección: Habilidades técnicas -->
-    <div class="section skills" id="skills">
-        <h2 class="section-title">Habilidades</h2>
-        <ul class="skill-list">
-            <li>Redes y Seguridad: CCNA</li>
-            <li>Metodologías: PMBOK, Scrum</li>
+    <!-- Sección: Certificados -->
+    <div class="section skills" id="certificate">
+        <h2 class="section-title">Certificados</h2>
+        <ul class="skill-list-certificate">
+            <li>PIT UNI
+                <ul>
+                    <li>PIT UNI: SQL Server (Básico)</li>
+                    <li>PIT UNI: Power BI (Básico)</li>
+                </ul>
+            </li>
+   
+            <li> CertiProf: Scrum Foundation Professional Certification - SFPC</li>
+
+            <li> Scrum Study: Scrum Fundamentals Certified (SFC)</li>
+
+            <li> Cisco
+                <ul>
+                    <li>CCNAv7: Introducción a Redes</li>
+                    <li>CCNAv7: Switching, Routing y Wireless Essentials</li>
+                </ul>
+            </li>
+
+            <li>SISE: Técnico Especialista MS-Office Estándar</li>
         </ul>
     </div>
 
@@ -46,13 +65,38 @@
     <div class="section skills programming" id="skills-programming">
         <h2 class="section-title">Habilidades de Programación</h2>
         <ul class="skill-list">
-            <li>Lenguajes: Java (básico), JavaScript, PHP (Laravel), HTML, CSS</li>
-            <li>Bases de Datos: SQL Server</li>
-            <li>Herramientas: Git, GitHub</li>
-            <li>Redes y Seguridad: CCNA</li>
-            <li>Metodologías: PMBOK, Scrum</li>
+            <li>
+                <img src="html.png" alt="HTML" />
+                <span>HTML</span>
+            </li>
+
+            <li>
+                <img src="css.png" alt="CSS" />
+                <span>CSS</span>
+            </li>
+
+            <li>
+                <img src="js.png" alt="JavaScript" />
+                <span>JavaScript</span>
+            </li>
+
+            <li>
+                <img src="Laravel.png" alt="PHP (Laravel)" />
+                <span>PHP (Laravel)</span>
+            </li>
+            
+            <li>
+                <img src="git.png" alt="Git" />
+                <span>Git</span>
+            </li>
+            
+            <li>
+                <img src="github.png" alt="GitHub" />
+                <span>GitHub</span>
+            </li>
         </ul>
     </div>
+
 
     <!-- Sección: Experiencia -->
     <div class="section experience" id="experience">
