--- a/index.html
+++ b/index.html
@@ -37,29 +37,32 @@
 
     <!-- Sección: Certificados -->
     <div class="section skills" id="certificate">
-        <h2 class="section-title">Certificados</h2>
-        <ul class="skill-list-certificate">
-            <li>PIT UNI
-                <ul>
-                    <li>PIT UNI: SQL Server (Básico)</li>
-                    <li>PIT UNI: Power BI (Básico)</li>
-                </ul>
-            </li>
-   
-            <li> CertiProf: Scrum Foundation Professional Certification - SFPC</li>
-
-            <li> Scrum Study: Scrum Fundamentals Certified (SFC)</li>
-
-            <li> Cisco
-                <ul>
-                    <li>CCNAv7: Introducción a Redes</li>
-                    <li>CCNAv7: Switching, Routing y Wireless Essentials</li>
-                </ul>
-            </li>
-
-            <li>SISE: Técnico Especialista MS-Office Estándar</li>
+    <h2 class="section-title">Certificados</h2>
+    <ul class="skill-list-certificate">
+        <li>
+        <strong>PIT UNI</strong>
+        <ul>
+            <li>SQL Server (Básico)</li>
+            <li>Power BI (Básico)</li>
         </ul>
+        </li>
+
+        <li><strong>CertiProf:</strong> Scrum Foundation Professional Certification - SFPC</li>
+
+        <li><strong>Scrum Study:</strong> Scrum Fundamentals Certified (SFC)</li>
+
+        <li>
+        <strong>Cisco</strong>
+        <ul>
+            <li>CCNAv7: Introducción a Redes</li>
+            <li>CCNAv7: Switching, Routing y Wireless Essentials</li>
+        </ul>
+        </li>
+
+        <li><strong>SISE:</strong> Técnico Especialista MS-Office Estándar</li>
+    </ul>
     </div>
+
 
         <!-- Sección: Habilidades programación -->
     <div class="section skills programming" id="skills-programming">
