--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </li>
 
             <li>
-                <img src="powerbi.png" alt="Power BI" />
+                <img src="PowerBI.png" alt="Power BI" />
                 <span>Power BI (Básico)</span>
             </li>         
         </ul>
