GSAP encabezado principal

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
 
     <!-- Encabezado principal -->
     <div class="header">
-        <h1>Steven Juan Camacuari Huanca</h1>
-        <p class="subtitle">Bachiller en Ingeniería de Sistemas</p>
+        <div class="nombre-animado text">
+            Steven Juan Camacuari Huanca
+        </div>
+
+        <div class="subtitulo-animado text">
+            Bachiller en Ingeniería de Sistemas
+        </div>
     </div>
 
     <!-- Sección: Sobre mí -->
@@ -211,14 +216,18 @@
     </div>
 
     <!-- Pie de página -->
-    <div class="footer">
+    <!-- <div class="footer">
         <p>&copy; 2025 Steven Camacuari</p>
-    </div>
+    </div> -->
 
 </body>
-    <!-- GSAP Animation Library -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
-    <!-- Archivo que contiene configuración GSAP -->
+    <!-- Librería principal de GSAP -->
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
 
+<!-- Plugin SplitText necesario para separar texto en letras, palabras, líneas -->
+<script src="https://assets.codepen.io/16327/SplitText3.min.js"></script>
+
+
+    <!-- Archivo que contiene configuración GSAP -->
     <script src="animations.js"></script>
 </html>
