correcion de enlance GSAP core

--- a/index.html
+++ b/index.html
@@ -221,13 +221,13 @@
     </div> -->
 
 </body>
-    <!-- Librería principal de GSAP -->
-<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
 
-<!-- Plugin SplitText necesario para separar texto en letras, palabras, líneas -->
+<!-- GSAP core -->
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+<!-- SplitText plugin (versión oficial) -->
 <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script>
 
-
-    <!-- Archivo que contiene configuración GSAP -->
+<!-- Archivo que contiene configuración GSAP -->
     <script src="animations.js"></script>
 </html>
