cambio del codigo para la animacion de cabecera debido a permisos de GSAP

--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
 
     <!-- Encabezado principal -->
     <div class="header">
-        <div class="nombre-animado text">
-            Steven Juan Camacuari Huanca
-        </div>
-
-        <div class="subtitulo-animado text">
-            Bachiller en Ingeniería de Sistemas
-        </div>
+    <div class="nombre-animado">
+        Steven Juan Camacuari Huanca
     </div>
+
+    <div class="subtitulo-animado">
+        Bachiller en Ingeniería de Sistemas
+    </div>
+    </div>
+
+
 
     <!-- Sección: Sobre mí -->
     <div class="section about" id="sobre-mi">
@@ -224,9 +226,6 @@
 
 <!-- GSAP core -->
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-
-<!-- SplitText plugin (versión oficial) -->
-<script src="https://assets.codepen.io/16327/SplitText3.min.js"></script>
 
 <!-- Archivo que contiene configuración GSAP -->
     <script src="animations.js"></script>
